# customer-churn-predictor-mlops

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  .secrets.baseline  API_RATE_LIMITING.md  ARCHITECTURE.md  AUTONOMOUS_BACKLOG_GUIDE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_SUMMARY.md  BACKLOG.md  CHANGELOG.md  CLAUDE_IMPROVEMENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_VALIDATION_SUMMARY.md  DEPENDENCY_MANAGEMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.prod  EDGE_CASE_TEST_SUMMARY.md  ENTERPRISE_DEPLOYMENT_SUMMARY.md  GOVERNANCE.md  IMPLEMENTATION_SUMMARY.md  INNOVATION_PIPELINE.md  LICENSE  Makefile  PATH_CONFIGURATION_GUIDE.md  PERFORMANCE_IMPROVEMENTS.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_SUMMARY.md  PROJECT_CHARTER.md  README.md  SDLC_OPTIMIZATION_SUMMARY.md  SECURITY.md  (+40 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  advanced-security.yml  dependabot.yml  dependency-review-config.yml  labeler.yml  performance-benchmarks.yml  pr-automation.yml  project-metrics.json  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/codeql/: codeql-config.yml
.github/workflow-templates/: comprehensive-ci-cd.yml
.github/workflows/: main.yml
automation/: advanced-deployment.yml
compliance/: advanced-compliance.yml
data/: test_predictions.csv
data/processed/: processed_features.csv  processed_target.csv
data/raw/: customer_data.csv
deployment/: README.md
deployment/istio/: destination-rules.yaml  gateway.yaml  security-policies.yaml  telemetry.yaml
deployment/kubernetes/: configmap.yaml  database-deployments.yaml  ingress.yaml  ml-service-deployment.yaml  namespace.yaml  persistent-volumes.yaml  secrets.yaml  services.yaml
deployment/monitoring/: jaeger-distributed-tracing.yaml
deployment/security/: network-policies.yaml
deployment/terraform/: main.tf  variables.tf
docs/: API_AUTHENTICATION.md  DEVELOPMENT.md  ROADMAP.md  SETUP_REQUIRED.md  build.sh  index.md  mkdocs.yml  requirements.txt
docs/adr/: 0001-mlops-architecture.md  template.md
docs/api/: openapi.json  overview.md
docs/deployment/: build-guide.md  docker.md
docs/guides/: developer-guide.md  (+1 more)
examples/: research_framework_examples.py  run_research_examples.py
monitoring/: alert-rules.yml  alerts.yml  prometheus.yml
observability/: advanced-observability.yml  distributed-tracing.yml  opentelemetry-config.yaml
quality_gate_reports/: quality_gate_1755244856.json
scripts/: autonomous_backlog_manager.py  collect_metrics.py  compare_models.py  docker-build.sh  docker-deploy.sh  generate_sbom.py  run_autonomous_ml.py  run_comprehensive_quality_gates.py  run_docker_tests.py  run_evaluation.py  run_monitor.py  run_pipeline.py  run_prediction.py  run_preprocessing.py  run_training.py  security-scan.sh  update_dependencies.py  validate_data.py  validate_integration.py
security/: advanced-security-config.yml
src/: adaptive_intelligence_framework.py  adaptive_learning.py  advanced_caching_optimization.py  advanced_ensemble_engine.py  advanced_error_recovery_system.py  advanced_monitoring.py  advanced_optimization.py  advanced_quality_gates.py  advanced_security.py  api.py  auto_scaling_optimization.py  automated_feature_engineering.py  autonomous_evolution_orchestrator.py  autonomous_learning_evolution.py  autonomous_ml_orchestrator.py  autonomous_reliability_orchestrator.py  autonomous_retraining.py  causal_discovery_framework.py  cli.py  config.py  constants.py  data_validation.py  distributed_computing.py  distributed_research_orchestration.py  enhanced_research_api.py  enterprise_ml_platform.py  enterprise_reliability_orchestrator.py  env_config.py  error_handling_recovery.py  explainable_ai_engine.py  global_compliance_framework.py  global_research_coordinator.py  health_check.py  high_performance_optimization.py  hyperscale_distributed_orchestrator.py  hyperscale_performance_engine.py  intelligent_model_selection.py  logging_config.py  metrics.py  mlflow_utils.py  (+28 more)
test_reports/: comprehensive_report_comprehensive_test_20250815_080035.html  comprehensive_report_comprehensive_test_20250815_080035.json  quality_gates_report.json  report.html
tests/: conftest.py  test_advanced_error_recovery_system.py  test_advanced_ml_enhancements.py  test_advanced_optimization.py  test_advanced_security.py  test_api_authentication.py  test_api_security_headers.py  test_authentication_logic.py  test_auto_scaling_optimization.py  test_automated_feature_engineering.py  test_autonomous_reliability_orchestrator.py  test_autonomous_retraining.py  test_ci_dev_dependencies.py  test_claude_flow_2cd7gs.js  test_claude_flow_uehkj.js  test_cli.py  test_cli_edge_cases.py  test_comprehensive_new_components.py  test_config.py  test_config.yaml  test_constants.py  test_data_validation.py  test_distributed_computing.py  test_docker_health_check_live.py  test_docker_integration.py  test_docker_security.py  test_enhanced_health_monitoring.py  test_enhanced_metrics.py  test_env_config.py  test_error_handling_recovery.py  test_health_check.py  test_health_monitoring_functionality.py  test_high_performance_optimization.py  test_integration_edge_cases.py  test_intelligent_model_selection.py  test_logging_system.py  test_metrics.py  test_mlflow_utils.py  test_model_cache.py  test_models_directory.py  (+23 more)
workflow-files-for-manual-addition/: README.md  dependency-update.yml  release.yml  security.yml
(+54 files in other folders)
